--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
               // Draw "Base Coach 1.0" text (Logo) at the top of the screen
              ctx.save(); // Save the current context state
 
-            const text = "Base Coach 1.0";
+            const text = "Triple Play 1.0";
             const centerX = canvasWidth / 2; // Center horizontally
             const centerY = canvasHeight * 0.1; // Position text near the top of the screen
              ctx.fillStyle = "white";
