--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             width: 100%;
             max-width: 600px;
             /* Limit maximum width for larger screens */
-             background-color: #ff0000; /*Red container for card look*/
+             background-color: #000000; /*Red container for card look*/
             border: 2px solid black;
         }
 
